// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouteStation case "end": renders correctly 1`] = `
<Row
  gutter={
    Array [
      16,
      0,
    ]
  }
>
  <Col
    flex="90px"
  >
    <div
      className="route-station--time"
    >
      11:11 AM
    </div>
  </Col>
  <Col
    flex="40px"
  >
    <StationCanvas
      mode="end"
    />
  </Col>
  <Col
    flex="auto"
  >
    <Title>
      station
    </Title>
  </Col>
</Row>
`;

exports[`RouteStation case "middle": renders correctly 1`] = `
<Row
  gutter={
    Array [
      16,
      0,
    ]
  }
>
  <Col
    flex="90px"
  >
    <div
      className="route-station--time"
    >
      11:11 AM
    </div>
  </Col>
  <Col
    flex="40px"
  >
    <StationCanvas
      mode="middle"
    />
  </Col>
  <Col
    flex="auto"
  >
    <Title>
      station
    </Title>
  </Col>
</Row>
`;

exports[`RouteStation case "start": renders correctly 1`] = `
<Row
  gutter={
    Array [
      16,
      0,
    ]
  }
>
  <Col
    flex="90px"
  >
    <div
      className="route-station--time"
    >
      11:11 AM
    </div>
  </Col>
  <Col
    flex="40px"
  >
    <StationCanvas
      mode="start"
    />
  </Col>
  <Col
    flex="auto"
  >
    <Title>
      station
    </Title>
  </Col>
</Row>
`;
